--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -26,16 +26,24 @@ jobs:
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v2'
 
-      - name: Configure Docker
-        run: |
-          gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
       - name: Create env file
         run: |
           echo ${{ secrets.ENVS }} > .env
+      # - name: Configure Docker
+      #   run: |
+      #     gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
+      - name: Configure Docker
+        run: |
+          gcloud auth print-access-token \
+            --impersonate-service-account  cloud-storage-payload-connecto@payload-cms-test.iam.gserviceaccount.com | docker login \
+            -u oauth2accesstoken \
+            --password-stdin https://africa-south1-docker.pkg.dev
 
-      - name: Build and Push Docker Image
+      - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_IMAGE_URL }}:latest -f Dockerfile .
+      - name: Push Docker Image
+        run: |
           docker push ${{ secrets.DOCKER_IMAGE_URL }}:latest
 
       - name: Deploy to Cloud Run
