--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -29,15 +29,9 @@ jobs:
       - name: Create env file
         run: |
           echo ${{ secrets.ENVS }} > .env
-      # - name: Configure Docker
-      #   run: |
-      #     gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
       - name: Configure Docker
         run: |
-          gcloud auth print-access-token \
-            --impersonate-service-account  cloud-storage-payload-connecto@payload-cms-test.iam.gserviceaccount.com | docker login \
-            -u oauth2accesstoken \
-            --password-stdin https://africa-south1-docker.pkg.dev
+          gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
 
       - name: Build Docker Image
         run: |
