--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -31,7 +31,7 @@ jobs:
           echo ${{ secrets.ENVS }} > .env
       - name: Set Google Cloud Project
         run: |
-          gcloud config set project ${{ secrets.PROJECT_ID }
+          gcloud config set project ${{ secrets.PROJECT_ID }}
       - name: Configure Docker
         run: |
           gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
