--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -28,10 +28,7 @@ jobs:
 
       - name: Create env file
         run: |
-          echo ${{ secrets.ENVS }} > .env
-      # - name: Set Google Cloud Project
-      #   run: |
-      #     gcloud config set project ${{ secrets.PROJECT_ID }}
+          echo ${{ secrets.ENVS }} >> .env
       - name: Configure Docker
         run: |
           gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
