--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -30,9 +30,10 @@ jobs:
         run: |
           gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
 
+      - name: Create env file
+        run: echo "${{ secrets.ENVS }}" > .env
       - name: Build Docker Image
         run: |
-          echo ${{ secrets.ENVS }} > .env.extra
           docker build -t ${{ secrets.DOCKER_IMAGE_URL }}:latest .
       - name: Push Docker Image
         run: |
