Updated the development workflow

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -30,16 +30,20 @@ jobs:
         run: |
           gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
 
-      - name: Build and Push Docker Image
+      - name: Create env file
+        run: echo "${{ secrets.ENVS }}" > .env
+      - name: Build Docker Image
         run: |
-          docker build -t ${{ env.DOCKER_IMAGE_URL }}:latest -f Dockerfile .
-          docker push ${{ env.DOCKER_IMAGE_URL }}:latest
+          docker build -t ${{ secrets.DOCKER_IMAGE_URL }}:latest .
+      - name: Push Docker Image
+        run: |
+          docker push ${{ secrets.DOCKER_IMAGE_URL }}:latest
 
       - name: Deploy to Cloud Run
         run: |
           echo SERVICE_NAME ${{ secrets.SERVICE_NAME }}
           gcloud run deploy ${{ secrets.SERVICE_NAME }} \
-            --image ${{ env.DOCKER_IMAGE_URL }}:latest \
+            --image ${{ secrets.DOCKER_IMAGE_URL }}:latest \
             --platform managed \
             --region ${{ secrets.REGION }} \
             --allow-unauthenticated
