--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.13.0",
     "@payloadcms/db-postgres": "beta",
     "@payloadcms/next": "beta",
     "@payloadcms/plugin-cloud": "beta",
     "@payloadcms/richtext-lexical": "beta",
+    "@payloadcms/storage-gcs": "3.0.0-beta.113",
     "cross-env": "^7.0.3",
+    "google-auth-library": "^9.14.2",
     "graphql": "^16.8.1",
     "next": "15.0.0-canary.173",
     "payload": "beta",
