--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,10 +3,10 @@ name: Deploy to Cloud Run
 on:
   push:
     branches:
-      - development
+      - dev-nextjs
   pull_request:
     branches:
-      - development
+      - dev-nextjs
 
 jobs:
   dockerize-and-deploy:
@@ -18,13 +18,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Google Cloud Auth
-        uses: 'google-github-actions/auth@v2'
+        uses: "google-github-actions/auth@v2"
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
           project_id: ${{ secrets.PROJECT_ID }}
 
       - name: Set up Cloud SDK
-        uses: 'google-github-actions/setup-gcloud@v2'
+        uses: "google-github-actions/setup-gcloud@v2"
 
       - name: Configure Docker
         run: |
@@ -32,6 +32,12 @@ jobs:
 
       - name: Create env file
         run: echo "${{ secrets.ENVS }}" > .env
+      - name: Exporting envs
+        run: export $(grep -Ev '^(#|$)' .env | xargs)
+      - name: Create GCS ADC json file
+        run: echo "${{ secrets.GCP_SA_KEY }}" > "$(echo $PAYLOAD_GCS_KEYS_FILE_NAME)"
+      - name: Create GCS credentials file
+        run: echo "${{ secrets.GCP_SA_KEY }}" > "$(echo $PAYLOAD_GCS_ADC_FILE_NAME)"
       - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_IMAGE_URL }}:latest .
