--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Create env file
         run: echo "${{ secrets.ENVS }}" > .env
+      - name: Creat key.json file
+        run: echo '${{ secrets.GCP_SA_KEY }}' > key.json
       - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_IMAGE_URL }}:latest .
