--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Export env variables
         run: export $(grep -Ev '^(#|$) .env | xargs')
       - name: Create key.json file
-        run: echo $PAYLOAD_GCS_CREDENTIALS > key.json
+        run: echo '${{ toJson(secrets.GCP_SA_KEY) }}' > key.json
       - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_IMAGE_URL }}:latest .
