--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,6 @@
 node_modules
-## Google cloud auth stuff
+# Google cloud auth stuff
 key.json
 application_default_credentials*.json
+# Local deply scrit
+deploy
