--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,9 +1,9 @@
 name: Deploy to Cloud Run
 
 on:
-  push:
-    branches:
-      - dev-nextjs
+  # push:
+  #   branches:
+  #     - dev-nextjs
   pull_request:
     branches:
       - dev-nextjs
